--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -41,6 +41,8 @@ $zorroa-lightgray  : #c3c3c3;
 $zorroa-nearwhite  : #ededed;
 $zorroa-transparent: transparent;
 
+$zorroa-selected       : #D5E9BC;
+$zorroa-hover          : #C4DEA3;
 
 /* shared metrics */
 
