--- a/src/components/Inspector/Inspector.scss
+++ b/src/components/Inspector/Inspector.scss
@@ -1,15 +1,29 @@
-.inspector {
+.Inspector {
   flex: 1;
   padding: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
-  .inspector-content {
-    width: 100%;
-    height: 100%;
-    max-width:100%;
-    max-height:100%;
-    overflow: hidden;
-  }
+.Inspector-content {
+  width: 100%;
+  height: 100%;
+  max-width:100%;
+  max-height:100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.Inspector-warning {
+  position: absolute;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  color: rgba(128, 128, 128, 1);
+  text-shadow: 0 0 2px 2px rgba(0,0,0, 0.5);
 }
