--- a/src/components/Header/CreateImport.scss
+++ b/src/components/Header/CreateImport.scss
@@ -10,25 +10,19 @@
   text-transform: uppercase;
   color: white;
   background-color: black;
-  height: auto;
+  height: 40px;
 
   @include flexRow;
   @include flexAlignItemsCenter;
   @include flexJustifySpaceBetween;
 
-  div[class*='icon-'] {
-    margin-top: 12px;
-    margin-bottom: 12px;
-    margin-left: 12px;
-    margin-right: 12px;
-  }
-
-  .icon-folder-upload {
+  .CreateImport-header-icon {
+    @include zorroa-square-icon(40px);
     font-size: 20px;
   }
 
-  .icon-cross2:hover {
-    color: $zorroa-sickly-green;
+  .CreateImport-header-close {
+    @include zorroa-square-btn-lighten(40px);
   }
 }
 
