--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -26,13 +26,7 @@
   }
 
   .Facet-settings {
-    @include flexRowCenter;
-    width: 40px;
-    height: 40px;
-    &:hover {
-      color: $zorroa-sickly-green;
-      background-color: rgba(0,0,0,0.2);
-    }
+    @include zorroa-square-btn-darken(40px);
   }
 
   .Facet-body {
