--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -51,22 +51,49 @@ $zorroa-Sidebar-width : 340px;
 
 /* Button classes */
 
-@mixin zorroa-btn-bg($color,$hover) {
-  background-color: $color;
-  &:hover {
-    color: white;
-    background-color: $hover;
-  }
+// @mixin zorroa-btn-bg($color,$hover) {
+//   background-color: $color;
+//   &:hover {
+//     color: white;
+//     background-color: $hover;
+//   }
+// }
+// @mixin zorroa-btn($color,$hover) {
+//   @extend .zorroa-btn;
+//   @include zorroa-btn-bg($color,$hover);
+//   &:disabled {
+//     color: white;
+//     background-color: $zorroa-lightgray;
+//   }
+// }
+
+@mixin zorroa-square-icon($size) {
+  @include flexOff;
+  @include flexRowCenter;
+  width: $size;
+  height: $size;
 }
-@mixin zorroa-btn($color,$hover) {
-  @extend .zorroa-btn;
-  @include zorroa-btn-bg($color,$hover);
-  &:disabled {
-    color: white;
-    background-color: $zorroa-lightgray;
+
+@mixin zorroa-square-btn($size) {
+  @include zorroa-square-icon($size);
+  cursor: pointer;
+}
+
+@mixin zorroa-square-btn-lighten($size) {
+  @include zorroa-square-btn($size);
+  &:hover {
+    font-weight: 600;
+    background-color: rgba(255,255,255,0.2);
   }
 }
 
+@mixin zorroa-square-btn-darken($size) {
+  @include zorroa-square-btn($size);
+  &:hover {
+    font-weight: 600;
+    background-color: rgba(0,0,0,0.2);
+  }
+}
 
 /* Text classes */
 
@@ -76,6 +103,8 @@ $zorroa-Sidebar-width : 340px;
   @include nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  min-width: 0;
+  width: 100%;
 }
 
 @mixin noSelect {
@@ -175,6 +204,8 @@ $zorroa-Sidebar-width : 340px;
 
 @mixin flexOn  { -webkit-box-flex : 1 1 auto ; -moz-box-flex : 1 1 auto; -webkit-flex : 1 1 auto ; -ms-flex : 1 1 auto; flex : 1 1 auto; }
 @mixin flexOff { -webkit-box-flex : 0 0 auto ; -moz-box-flex : 0 0 auto; -webkit-flex : 0 0 auto ; -ms-flex : 0 0 auto; flex : 0 0 auto; }
+
+@mixin flexShrinkOnly { -webkit-box-flex : 0 1 auto ; -moz-box-flex : 0 1 auto; -webkit-flex : 0 1 auto ; -ms-flex : 0 1 auto; flex : 0 1 auto; }
 
 @mixin flexJustifyStart  { -webkit-justify-content: flex-start ; -moz-justify-content: flex-start ; -ms-flex-pack: flex-start ; justify-content: flex-start ; }
 @mixin flexJustifyEnd    { -webkit-justify-content: flex-end   ; -moz-justify-content: flex-end   ; -ms-flex-pack: flex-end   ; justify-content: flex-end   ; }
