Fix metadata arrays. Fix proxy.proxy where field==namespace. Color arrays. [Finishes #132379861]

--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -45,6 +45,8 @@
 .CollapsibleHeader-label {
   @include clampText;
   @include noSelect;
+  @include flexRow;
+  @include flexAlignItemsCenter;
   cursor: default;
 }
 
