--- a/src/components/Metadata/DisplayPropertiesItem.scss
+++ b/src/components/Metadata/DisplayPropertiesItem.scss
@@ -9,7 +9,7 @@
 
   .DisplayPropertiesItem-label {
     @include flexOff;
-    margin-left: 4px;
+    @include flexRow;
     width: 120px;
     min-width: 120px;
     text-align: right;
@@ -20,7 +20,7 @@
     font-weight: 200;
   }
 
-  .value {
+  .DisplayPropertiesItem-value {
     margin-left: 6px;
     padding-left: 6px;
     text-align: left;
@@ -28,28 +28,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     color: $zorroa-gray;
-
-    .terms {
-      .all {
-        line-height: 1.5em;
-        font-size: 12px;
-        margin: 2px 1px 0px;
-        border-radius: 3px;
-        padding: 2px 6px;
-        color: $zorroa-gray;
-        background-color: $zorroa-nearwhite;
-      }
-
-      .some {
-        line-height: 1.5em;
-        font-size: 12px;
-        margin: 2px 1px 0;
-        border-radius: 3px;
-        padding: 2px 6px;
-        background-color: $zorroa-nearwhite;
-        color: $zorroa-lightgray;
-      }
-    }
   }
 
   .DisplayPropertiesItem-search {
@@ -75,4 +53,46 @@
       color: $zorroa-lightgray;
     }
   }
+}
+
+.DisplayPropertiesItem-header {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+}
+
+.DisplayPropertiesItem-indent {
+  width: 0px;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+}
+
+.DisplayPropertiesItem-all-values {
+  line-height: 1.5em;
+  font-size: 12px;
+  margin: 2px 1px 0px;
+  border-radius: 3px;
+  padding: 2px 6px;
+  color: $zorroa-gray;
+  background-color: $zorroa-nearwhite;
+}
+
+.DisplayPropertiesItem-some-values {
+  line-height: 1.5em;
+  font-size: 12px;
+  margin: 2px 1px 0;
+  border-radius: 3px;
+  padding: 2px 6px;
+  background-color: $zorroa-nearwhite;
+  color: $zorroa-lightgray;
+}
+
+.DisplayPropertiesItem-color {
+  @include flexOff;
+  width: 16px;
+  height: 16px;
+  margin-right: 1px;
 }
