--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -2,62 +2,94 @@
 
 .Lightbar {
   @include flexOff;
+  @include flexRow;
+  @include flexJustifySpaceBetween;
 
   color: white;
   background-color: black;
   justify-content: space-between;
-  display: flex;
   width: 100%;
-  height: 60px;
+  min-height: 60px;
+}
 
-  .Lightbar-attr {
-    display: flex;
-    margin-left: 22px;
+.Lightbar-settings {
+  @include zorroa-square-btn-lighten(60px);
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  border: none;
+}
 
-    .Lightbar-attr-label {
-      margin-right: 10px;
-      font-size: 12px;
-      font-weight: 100;
-      text-align: right;
-      color: $zorroa-nearwhite;
-    }
+.Lightbar-metadata {
+  @include flexOn;
+  margin-top: 15px;
+  @include flexCol;
+  @include flexWrap;
+  max-height: 100%;
+  overflow-y: auto;
 
-    .Lightbar-attr-value {
-      font-size: 14px;
-      color: white;
-    }
+  &::-webkit-scrollbar {
+    height: 5px;
   }
+}
 
-  .Lightbar-settings {
-    @include zorroa-square-icon(60px);
-    font-size: 20px;
-  }
+.Lightbar-attr {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+}
 
-  .Lightbar-btn-icon {
-    font-size: 20px;
-    margin-left: 10px;
-  }
+.Lightbar-attr-field {
+  font-size: 12px;
+  font-weight: 100;
+  color: $zorroa-lightgray;
+  text-align: right;
+}
 
-  .Lightbar-action {
-    margin: 10px;
-    &:hover  { color: $zorroa-sickly-green; }
-    &:active { color: chartreuse; }
-  }
-  .Lightbar-action-text {
-    text-transform: uppercase;
-    @media screen and (max-width: 1000px) { display: none; }
-  }
+.Lightbar-attr-separator {
+  height: 32px;
+  border-right: 1px solid $zorroa-darkgray;
+  margin-left: 4px;
+}
 
-  .Lightbar-close {
-    @include zorroa-square-btn-lighten(60px);
-    font-size: 20px;
-  }
+.Lightbar-attr-value {
+  font-size: 14px;
+  color: $zorroa-nearwhite;
+}
 
-  button {
-    color: white;
-    padding: 0;
-    border: none;
-    background: none;
-    outline: none;
-  }
+.Lightbar-btn-icon {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.Lightbar-actions {
+  @include flexRow;
+  @include flexWrap;
+  @include flexJustifyEnd;
+  @include flexAlignItemsStart;
+  margin-top: 10px;
+}
+
+.Lightbar-action {
+  @include flexRowCenter;
+  color: $zorroa-nearwhite;
+  margin: 10px;
+  border: none;
+  background: none;
+  outline: none;
+  &:hover  { color: $zorroa-sickly-green; }
+  &:active { color: chartreuse; }
+}
+
+.Lightbar-action-text {
+  text-transform: uppercase;
+  @media screen and (max-width: 1000px) { display: none; }
+}
+
+.Lightbar-close {
+  @include zorroa-square-btn-lighten(60px);
+  font-size: 20px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: black;
 }
