--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -23,7 +23,7 @@
 
 .Lightbar-metadata {
   @include flexOn;
-  margin-top: 15px;
+  padding-top: 15px;
   @include flexCol;
   @include flexWrap;
   align-content: flex-start;
@@ -76,6 +76,7 @@
 
 .Lightbar-action {
   @include flexRowCenter;
+  @include noSelect;
   color: $zorroa-nearwhite;
   margin: 10px;
   border: none;
@@ -114,9 +115,9 @@
   position: absolute;
   overflow: hidden;
   left: 0;
-  bottom: 0;
+  bottom: 2px;
   right: 0;
-  top: 0;
+  top: 2px;
 }
 
 .Lightbar-column-resizer {
@@ -125,20 +126,19 @@
   top: 0;
   bottom: 0;
   width: 5px;
-  &:hover {
-    background-color: $zorroa-darkgray;
-  }
-  float: left;
+
+  &:hover { background-color: $zorroa-darkgray; }
+  &.isDragging { background-color: $zorroa-darkgray; }
 }
 
 .Lightbar-action-resizer {
   cursor: ew-resize;
   position: absolute;
-  top: 0;
-  bottom: 0;
+  top: 2px;
+  bottom: 2px;
   left: 0;
   width: 5px;
-  &:hover {
-    background-color: $zorroa-darkgray;
-  }
+
+  &:hover { background-color: $zorroa-darkgray; }
+  &.isDragging { background-color: $zorroa-darkgray; }
 }
