Embed Roboto fonts. Enables font-weight in all styles. (#214)
* Embed Roboto fonts. Enables font-weight in all styles.

* Fix local Roboto. Switch video time to use Roboto.

--- a/src/components/Assets/AssetCounter.scss
+++ b/src/components/Assets/AssetCounter.scss
@@ -6,7 +6,7 @@
   white-space: nowrap;
 
   .asset-counter-count {
-    font-weight: bold;
+    font-weight: 700;
     color: $zorroa-greyish-brown;
   }
 
