--- a/src/components/Assets/Pager.scss
+++ b/src/components/Assets/Pager.scss
@@ -17,7 +17,7 @@
     margin-bottom: 10px;
     border-radius: 3px;
     outline: none;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 12px;
   }
 
@@ -72,7 +72,7 @@
       border-bottom: 1px solid;
       border-radius: 0;
       padding: 0;
-      font-weight: normal;
+      font-weight: 400;
     }
   }
 }
