Create new imports using server paths or local files, with support fo… (#216)
* Create new imports using server paths or local files, with support for local file drop. Show progress during upload and add to Import list after upload completes. Update to latest UI design with pipeline cards, server path, and file lists. Creates generator processors and actions for creating import jobs.
[Finishes #132413577]

* CreateImport styling suggestions

Make the import dialog 800px wide

Center the modal

Make DisplayOptions & CreateFolder modal backgrounds consistent with the others.

CreateImport dialog pipelines layout:

  Line them up into a grid.
  Make sure the dialog doesn't get too big with
    multiple rows of open pipelines.
  Put scrollbar flush on the right edge of the dialog,
    not inside any margin or padding.

* Remove DisplayOptions and CreateFolder background elements.

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -11,10 +11,14 @@
   position: fixed;
   width: 100vw;
   z-index: 100000;
+  @include flexRowCenter;
+
+  .modal-csstg {
+    @include flexRowCenter;
+  }
 
   .modal {
     margin: 0 auto;
-    top: 200px;
     background-color: $BACKGROUND_COLOR;
     border-radius: $BORDER_RADIUS;
     box-shadow: 10px 10px 32px -10px rgba(0,0,0,0.75);
