--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -43,6 +43,7 @@ $zorroa-transparent: transparent;
 
 $zorroa-selected       : #D5E9BC;
 $zorroa-hover          : #C4DEA3;
+$zorroa-dropzone       : rgba(115, 182, 28, 0.75);
 
 /* shared metrics */
 
