--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?5vqt9b');
-  src:  url('fonts/zorroa-icons.eot?5vqt9b#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?5vqt9b') format('woff2'),
-    url('fonts/zorroa-icons.ttf?5vqt9b') format('truetype'),
-    url('fonts/zorroa-icons.woff?5vqt9b') format('woff'),
-    url('fonts/zorroa-icons.svg?5vqt9b#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?fju91d');
+  src:  url('fonts/zorroa-icons.eot?fju91d#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?fju91d') format('woff2'),
+    url('fonts/zorroa-icons.ttf?fju91d') format('truetype'),
+    url('fonts/zorroa-icons.woff?fju91d') format('woff'),
+    url('fonts/zorroa-icons.svg?fju91d#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,9 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-doublearrows:before {
+  content: "\e95d";
 }
 .icon-script:before {
   content: "\e95c";
