--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -38,6 +38,7 @@ $zorroa-light-green    : #b7df4d;
 $zorroa-darkgray   : #4a4a4a;
 $zorroa-gray       : #808080;
 $zorroa-lightgray  : #c3c3c3;
+$zorroa-darkwhite  : #d8d8d8;
 $zorroa-nearwhite  : #ededed;
 $zorroa-transparent: transparent;
 
@@ -213,6 +214,7 @@ $zorroa-Sidebar-width : 340px;
 
 @mixin flexAlignItemsCenter { -webkit-align-items: center     ; -moz-align-items: center     ; -ms-align-items: center     ; align-items: center     ; }
 @mixin flexAlignItemsStart  { -webkit-align-items: flex-start ; -moz-align-items: flex-start ; -ms-align-items: flex-start ; align-items: flex-start ; }
+@mixin flexAlignItemsEnd  { -webkit-align-items: flex-end ; -moz-align-items: flex-end ; -ms-align-items: flex-end ; align-items: flex-end ; }
 
 @mixin flexCenter {
   @include flexRow;
