Fix Import Name font. Get rid of lt and gt. [Finishes #136803123][Finishes #136803191]

--- a/src/components/Header/CreateImport.scss
+++ b/src/components/Header/CreateImport.scss
@@ -100,7 +100,8 @@
 
 .CreateImport-package-label {
   font-size: 12px;
-  font-family: "Roboto Compressed";
+  font-family: "Roboto Condensed";
+  font-weight: 100;
   text-transform: uppercase;
   color: $zorroa-lightgray;
   margin-left: 20px;
