Use ghostly mag in empty racetrack. [Finishes #136799591]

--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -162,7 +162,7 @@
 }
 
 .Racetrack-empty-icon-mag {
+  @extend .Racetrack-empty;
   font-size: 30px;
-  color: $zorroa-gray;
   padding: 5px 8px;
 }
