--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -36,7 +36,6 @@
     background-clip: padding-box;
     background-color: #fff;
     border-radius: 4px;
-    border: 1px solid #ccc;
     box-sizing: border-box;
     list-style-type: none;
     margin: 16px 0 0;
@@ -47,11 +46,12 @@
     right: 0;
     z-index: 1000;
     box-shadow: 0 0 30px 0 $zorroa-gray;
+    min-width: 240px;
   }
 
   .DropdownMenu-item {
     line-height: 1.5;
-    padding: 5px;
+    padding: 8px;
     width: 100%;
     height: 100%;
     text-transform: uppercase;
