Set cursor for all buttons. [Finishes #136803981]

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -85,6 +85,8 @@
     outline: none;
     font-size: 20px;
     background-color: #fff;
+    cursor: pointer;
+
     &:hover { background-color: $zorroa-lightgray; }
   }
 
@@ -116,6 +118,7 @@
     outline: none;
     font-size: 20px;
     background-color: #fff;
+    cursor: pointer;
     &:hover { background-color: $zorroa-lightgray; }
   }
 
