--- a/src/components/Searchbar/Searchbar.scss
+++ b/src/components/Searchbar/Searchbar.scss
@@ -16,6 +16,7 @@
     padding-left: 12px;
     border: none;
     background: none;
+    cursor: pointer;
     color: $zorroa-sickly-green;
     font-size: 20px; // TODO: see if we can delete this when bootstrap is gone
   }
