--- a/src/components/Assets/ThumbSizeSlider.scss
+++ b/src/components/Assets/ThumbSizeSlider.scss
@@ -18,6 +18,7 @@
   width: 30px;
   height: 30px;
   border-radius: 3px;
+  cursor: pointer;
   &:hover { background-color: $zorroa-lightgray; }
 }
 
@@ -25,6 +26,7 @@
   width: 30px;
   height: 30px;
   border-radius: 3px;
+  cursor: pointer;
   &:hover { background-color: $zorroa-lightgray; }
 }
 
