--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -141,6 +141,7 @@
       border-radius: 3px;
       background: none;
       border: none;
+      cursor:pointer;
 
       &:hover:enabled {
         background-color: #a5a5a5;
