--- a/src/components/DisplayOptions/DisplayOptions.scss
+++ b/src/components/DisplayOptions/DisplayOptions.scss
@@ -243,11 +243,17 @@
     .DisplayOptions-body-empty {
       color: $zorroa-lightgray;
 
-      .icon-thumbs-up {
-        transform: scaleY(-1);
-        font-size: 40px;
+      [class*="icon-"] {
+        font-size: 72px;
+        font-weight: 500;
         margin-top: 12px;
         margin-bottom: 24px;
+        background-color: rgba(200,200,200,1);
+        color: transparent;
+        text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
       }
 
       .DisplayOptions-body-field-type {
